--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
+  <!-- <meta charset="UTF-8"> -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <script src="/script"></script>
-  <link rel="stylesheet" href="/css">
 </head>
-
 <body>
-  <div>hello world!</div>
+  
 </body>
-
 </html>
